add latest changes

--- a/intelligent_application/frontend/src/index.scss
+++ b/intelligent_application/frontend/src/index.scss
@@ -15,5 +15,5 @@ body {
   font-family: "Overpass", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #262626;
+  background-color: white;
 }
