--- a/intelligent_application/frontend/src/Photo/components/Photo.scss
+++ b/intelligent_application/frontend/src/Photo/components/Photo.scss
@@ -6,6 +6,7 @@
   align-items: center;
 }
 
+
 .photo {
   .camera-preview,
   .result-canvas,
@@ -97,7 +98,7 @@
 
   button.re-take-picture-button {
     padding: 0;
-    background-color: white;
+    background-color: blue;
     text-transform: none;
     font-size: 1.3rem;
     font-weight: 600;
