--- a/intelligent_application/frontend/src/Photo/components/Photo.scss
+++ b/intelligent_application/frontend/src/Photo/components/Photo.scss
@@ -54,7 +54,7 @@
   .result .img-container {
     .overlay.loading,
     .overlay.no-objects {
-      color: white;
+      color: blue;
       font-size: 24px;
       font-weight: 600;
 
